<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/menu_exit"
        android:title="@string/exit"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_difficultly"
        android:title="@string/difficulty"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/level1"
                android:title="@string/level1"
                app:showAsAction="never" />
            <item
                android:id="@+id/level2"
                android:title="@string/level2"
                app:showAsAction="never" />
            <item
                android:id="@+id/level3"
                android:title="@string/level3"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>